--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,7 @@
           <div class="section">
             <div class="row summary">
               <span class="mx-auto pb-4 section-break"><h3 class="title">Summary</h3></span>
-              <p><b>Software Engineer</b> skilled at overseeing complex requirements with a focus on efficiency,performance and scalability. I am also a Detail-oriented and proactive engineer with strong troubleshooting training.</p>
+              <p><b>Software Engineer</b> skilled at overseeing complex requirements with a focus on efficiency,performance and scalability. I am also a detail-oriented and proactive engineer with strong troubleshooting training.</p>
               <p>Interested in a healthy and challenging environment to develop the engineer experience and the same time welcoming new opportunities to learn and growth.</p>
             </div>
           </div>
@@ -57,14 +57,14 @@
                 <div class="col-md-4 list-container">
                   <ul>
                     <li>Fluent Javascript/NodeJS, Java.</li>
-                    <li>Angular 1 and Angular 2</li>
+                    <li>Angular 1 and Angular 2/4</li>
                     <li>ExpressJS, Spring-Boot</li>
                     <li>CSS, SCSS</li>
                     <li>Bootstrap, Zurb Foundation</li>
-                    <li>Oracle, Elasticsearch, Redis</li>
+                    <li>Oracle, Elasticsearch, Redis, NEO4J</li>
                     <li>Git, SVN</li>
-                    <li>AWS user, Jenkins, Arcanist</li>
-                    <li>NPM, grunt, bower, webpack.</li>
+                    <li>AWS</li>
+                    <li>npm, grunt, gulp, webpack.</li>
                     <li>JUnit, jasmine</li>
                     <li>Some python and Groovy</li>
                   </ul>
@@ -103,9 +103,10 @@
                     <span>Full-stack Engineer</span>
                     <span class="company-name">TrifinLabs</span>
                     <ul>
-                      <li>AWS.</li>
-                      <li>D3 NEO4J</li>
-                      <li>Develop several single page applications using Angular 1 and 2/4.</li>
+                      <li>Develop a graph visualization tool using NEO4J, AWS Lambda, Cognito, ReactJS/REDUX and D3.js.</li>
+                      <li>Develop a Product Launcher service that generates an end-2-end stack on AWS, by using Lambdas(NodeJs), Cloudformation Templates and PostgreSQL.</li>
+                      <li>Give support to AngularJS sites</li>
+                      <li>Work in a fast-paced environment</li>
                     </ul>
                   </div>
                 </div>
@@ -122,7 +123,6 @@
                       <li>Develop sites using Jquery and handlebars.</li>
                       <li>Interface with business analysts and product owners to determine optimal specifications and being able to take software design decisions.</li>
                       <li>Collaborate with team members in order to design better solutions.</li>
-                      <li>Create project template using yeoman, so it's easier to start a new micro application.</li>
                     </ul>
                   </div>
                 </div>
@@ -165,7 +165,7 @@
               <span class="mx-auto pb-3 section-break"><h3 class="title">Education</h3></span>
               <div class="info experience-list">
                 <div class="row experience">
-                  <div class="col-md-3 date">01/2013 - 01/2015</div>
+                  <div class="col-md-3 date">01/2013 - In Progress</div>
                   <div class="col-md-9 role-description">
                     <span>Software Engineering Bachelor's Degree - Universidad Cenfotec</span>
                   </div>
